Improve code example size and update node dependencies

--- a/part/code.pug
+++ b/part/code.pug
@@ -1,7 +1,7 @@
 .row
   .col-12.col-lg-6
-    pre
+    pre.doc-code-example
       code.code.language-html !{htmlCode}
   .col-12.col-lg-6
-    pre
+    pre.doc-code-example
       code.code.language-pug !{pugCode}
