--- a/src/documentation/atomic-design/quote/molecule.pug
+++ b/src/documentation/atomic-design/quote/molecule.pug
@@ -1,6 +1,5 @@
-blockquote.blockquote(cite='http://bradfrost.com/blog/post/atomic-web-design/#molecules')
-  p.mb-0 Molecules are groups of atoms bonded together and are the smallest fundamental units of a compound. These molecules take on their own properties and serve as the backbone of our design systems.
-
-  p.mb-0 For example, a form label, input or button aren’t too useful by themselves, but combine them together as a form and now they can actually do something together.
-
-  footer.blockquote-footer #[cite Atomic Design] by Brad Frost
+figure
+  blockquote.blockquote(cite='http://bradfrost.com/blog/post/atomic-web-design/#molecules')
+    p Molecules are groups of atoms bonded together and are the smallest fundamental units of a compound. These molecules take on their own properties and serve as the backbone of our design systems.
+    p For example, a form label, input or button aren’t too useful by themselves, but combine them together as a form and now they can actually do something together.
+  figcaption.blockquote-footer #[cite Atomic Design] by Brad Frost
