Use tikui style instead of bootstrap

--- a/part/code.pug
+++ b/part/code.pug
@@ -1,7 +1,7 @@
-.row
-  .col-12.col-lg-6
+.tikui-line-section.-s24
+  .tikui-line-section--column
     pre.doc-code-example
       code.code.language-html !{htmlCode}
-  .col-12.col-lg-6
+  .tikui-line-section--column
     pre.doc-code-example
       code.code.language-pug !{pugCode}
