--- a/part/component.pug
+++ b/part/component.pug
@@ -1,3 +1,4 @@
-.markdown !{markdown}
-.render !{render}
-.code !{code}
+.tikui-component
+  .tikui-component--markdown.markdown !{markdown}
+  .tikui-component--render.render !{render}
+  .tikui-component--code.code !{code}
