--- a/src/documentation/atomic-design/quote/atom.pug
+++ b/src/documentation/atomic-design/quote/atom.pug
@@ -1,5 +1,5 @@
-figure
-  blockquote.blockquote(cite='http://bradfrost.com/blog/post/atomic-web-design/#atoms')
+figure.tikui-quote
+  blockquote.tikui-quote--text(cite='http://bradfrost.com/blog/post/atomic-web-design/#atoms')
     p Atoms are the basic building blocks of matter. Applied to web interfaces, atoms are our HTML tags, such as a form label, an input or a button.
     p Atoms can also include more abstract elements like color palettes, fonts and even more invisible aspects of an interface like animations.
-  figcaption.blockquote-footer #[cite Atomic Design] by Brad Frost
+  figcaption.tikui-quote--author #[cite Atomic Design] by Brad Frost
