--- a/src/documentation/atomic-design/quote/organism.pug
+++ b/src/documentation/atomic-design/quote/organism.pug
@@ -1,5 +1,5 @@
-figure
-  blockquote.blockquote(cite='http://bradfrost.com/blog/post/atomic-web-design/#organisms')
+figure.tikui-quote
+  blockquote.tikui-quote--text(cite='http://bradfrost.com/blog/post/atomic-web-design/#organisms')
     p Organisms are groups of molecules joined together to form a relatively complex, distinct section of an interface.
     p Building up from molecules to organisms encourages creating standalone, portable, reusable components.
-  figcaption.blockquote-footer #[cite Atomic Design] by Brad Frost
+  figcaption.tikui-quote--author #[cite Atomic Design] by Brad Frost
