--- a/src/documentation/atomic-design/quote/template.pug
+++ b/src/documentation/atomic-design/quote/template.pug
@@ -1,4 +1,4 @@
-figure
-  blockquote.blockquote(cite='http://bradfrost.com/blog/post/atomic-web-design/#templates')
+figure.tikui-quote
+  blockquote.tikui-quote--text(cite='http://bradfrost.com/blog/post/atomic-web-design/#templates')
     p Templates consist mostly of groups of organisms stitched together to form pages. It’s here where we start to see the design coming together and start seeing things like layout in action.
-  figcaption.blockquote-footer #[cite Atomic Design] by Brad Frost
+  figcaption.tikui-quote--author #[cite Atomic Design] by Brad Frost
