--- a/src/documentation/mixin.pug
+++ b/src/documentation/mixin.pug
@@ -1,15 +1,19 @@
 mixin tikui-navbar(url, title)
   -const brandUrl = url || '/';
   -const brandTitle = title || 'Tikui';
-  nav.navbar.navbar-expand-md.navbar-dark.bg-dark
-    .container-fluid
-      a.navbar-brand(href=url)=brandTitle
-      ul.navbar-nav.me-auto
-        block
+  header.tikui-header
+    .tikui-header--slot
+      a.tikui-title-brand(href=url)=brandTitle
+    .tikui-header--slot
+      nav
+        ul.tikui-header-navigation
+          block
 
-mixin tikui-navbar-item(url, name, active)
+mixin tikui-navbar-item(url, name, selected)
   -const navUrl = url || '/';
   -const navName = name || navUrl;
-  -const activeClass = active ? 'active' : null;
-  li.nav-item
-    a.nav-link(href=navUrl class=activeClass)=navName
+  -const selectedClass = selected ? '-selected' : null;
+  li.tikui-header-navigation--slot
+    a.tikui-header-item(href=navUrl class=selectedClass)
+      span.tikui-header-item--text=navName
+      span.tikui-header-item--feedback
