--- a/src/documentation/layout.pug
+++ b/src/documentation/layout.pug
@@ -4,13 +4,13 @@ html
     meta(charset='utf-8')
     block title
       title Tikui
-    link(rel='stylesheet', href='/documentation/style.css')
-    link(rel='stylesheet', href='/lib/@fontsource/montserrat/index.css')
-    link(rel='stylesheet', href='/lib/@fontsource/montserrat/700.css')
-    link(rel='stylesheet', href='/lib/prismjs/prism-okaidia.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]documentation/style.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/index.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/700.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/prismjs/prism-okaidia.css')
   body
     .tikui-template-page
       block body
     :reload
-    script(src='/lib/prismjs/prism.js')
-    script(src='/lib/prismjs/prism-pug.js')
+    script(src='[[TIKUI_BASEPATH]]lib/prismjs/prism.js')
+    script(src='[[TIKUI_BASEPATH]]lib/prismjs/prism-pug.js')
