Add a submenu / index on levels
- Fix #20

--- a/src/documentation/atom/_atom.scss
+++ b/src/documentation/atom/_atom.scss
@@ -3,6 +3,7 @@
 @import 'image/image';
 @import 'link/link';
 @import 'logo/logo';
+@import 'nav-item/nav-item';
 @import 'paragraph/paragraph';
 @import 'quote/quote';
 @import 'title/title';
