--- a/src/documentation/molecule/_molecule.scss
+++ b/src/documentation/molecule/_molecule.scss
@@ -2,3 +2,4 @@
 @import 'component/component';
 @import 'header-navigation/header-navigation';
 @import 'list/list';
+@import 'nav-vertical/nav-vertical';
