--- a/src/documentation/layout-atomic.pug
+++ b/src/documentation/layout-atomic.pug
@@ -3,9 +3,9 @@ extends layout
 block title
   title Tikui
 block body
-  .tikui-template-page--header.doc-header
+  .tikui-template-page--header
     .tikui-template-page--container
       block header
-  .tikui-template-page--body.doc-content
+  .tikui-template-page--body(data-navigable)
     .tikui-template-page--container
       block content
