--- a/src/documentation/layout.pug
+++ b/src/documentation/layout.pug
@@ -1,9 +1,11 @@
 doctype html
-html
+html(lang='en')
   head
     meta(charset='utf-8')
     block title
       title Tikui
+    meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+    meta(name='description' content='Tikui is a Pattern Library generator.')
     link(rel='stylesheet', href='[[TIKUI_BASEPATH]]documentation/style.css')
     link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/index.css')
     link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/700.css')
@@ -14,3 +16,4 @@ html
     :reload
     script(src='[[TIKUI_BASEPATH]]lib/prismjs/prism.js')
     script(src='[[TIKUI_BASEPATH]]lib/prismjs/prism-pug.js')
+    script(src='[[TIKUI_BASEPATH]]documentation/scripts/tikui.js')
