Don't center vertically the container area

--- a/src/documentation/template/template-page/_template-page.scss
+++ b/src/documentation/template/template-page/_template-page.scss
@@ -29,7 +29,7 @@ $tikui-template-page--nav-width: 340px !default;
     box-sizing: content-box;
     flex-basis: 0;
     flex-grow: 1;
-    margin: auto;
+    margin: 0 auto;
     padding: 0 $tikui-template-page-spacing;
     width: auto;
     min-width: 0;
