--- a/src/documentation/atom/button/_button.scss
+++ b/src/documentation/atom/button/_button.scss
@@ -1,3 +1,5 @@
+@use 'sass:color';
+
 $tikui-button-border-width: 1px !default;
 $tikui-button-padding: 19px !default;
 $tikui-button-min-width: 176px !default;
@@ -5,21 +7,16 @@ $tikui-button-line-height: 20px !default;
 $tikui-button-font-size: 16px !default;
 $tikui-button-radius: 30px !default;
 $tikui-button-font-family: $tikui-font-family-main !default;
-
 $tikui-button-color-background: $tikui-color-secondary !default;
 $tikui-button-color-border: $tikui-color-secondary !default;
 $tikui-button-color-text: $tikui-color-text-dark !default;
-
 $tikui-button-focus-blur-radius: 5px !default;
 $tikui-button-focus-color-shadow: $tikui-color-primary !default;
-
-$tikui-button-hover--color-background: scale-color($tikui-button-color-background, $lightness: -10%) !default;
-
+$tikui-button-hover-color-background: color.scale($tikui-button-color-background, $lightness: -10%) !default;
 $tikui-button-secondary-color-background: $tikui-color-shade-100 !default;
 $tikui-button-secondary-color-border: $tikui-color-secondary !default;
 $tikui-button-secondary-color-text: $tikui-color-text-dark !default;
-
-$tikui-button-secondary-hover--color-background: $tikui-button-color-background !default;
+$tikui-button-secondary-hover-color-background: $tikui-button-color-background !default;
 
 .tikui-button {
   box-sizing: border-box;
@@ -40,7 +37,7 @@ $tikui-button-secondary-hover--color-background: $tikui-button-color-background 
   font-weight: bold;
 
   &:hover {
-    background-color: $tikui-button-hover--color-background;
+    background-color: $tikui-button-hover-color-background;
   }
 
   &:focus {
@@ -53,7 +50,7 @@ $tikui-button-secondary-hover--color-background: $tikui-button-color-background 
     color: $tikui-button-secondary-color-text;
 
     &:hover {
-      background-color: $tikui-button-secondary-hover--color-background;
+      background-color: $tikui-button-secondary-hover-color-background;
     }
   }
 }
