--- a/src/documentation/layout.pug
+++ b/src/documentation/layout.pug
@@ -7,8 +7,8 @@ html(lang='en')
     meta(name='viewport' content='width=device-width, initial-scale=1, shrink-to-fit=no')
     meta(name='description' content='Tikui is a Pattern Library generator.')
     link(rel='stylesheet', href='[[TIKUI_BASEPATH]]documentation/style.css')
-    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/index.css')
-    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/@fontsource/montserrat/700.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]documentation/lib/@fontsource/montserrat/index.css')
+    link(rel='stylesheet', href='[[TIKUI_BASEPATH]]documentation/lib/@fontsource/montserrat/700.css')
     link(rel='stylesheet', href='[[TIKUI_BASEPATH]]lib/prismjs/prism-okaidia.css')
   body
     .tikui-template-page
