--- a/src/documentation/organism/header/_header.scss
+++ b/src/documentation/organism/header/_header.scss
@@ -28,7 +28,7 @@ $tikui-header-small-spacing: 10px !default;
     height: auto;
 
     &--slot {
-      margin: 0 0 $tikui-header-small-spacing 0;
+      margin: 0 0 $tikui-header-small-spacing;
 
       &:last-child {
         margin-bottom: 0;
