Improve Tikui template to fix padding and title size issues

--- a/src/documentation/quark/title/_title.scss
+++ b/src/documentation/quark/title/_title.scss
@@ -10,6 +10,8 @@ $tikui-title-color-text: $tikui-color-text-dark !default;
   color: $tikui-title-color-text;
   font-family: $tikui-title-font-family;
   font-weight: bold;
+  hyphens: auto;
+  overflow-wrap: anywhere;
 }
 
 @import 'title-brand';
