--- a/src/documentation/template/template-page/_template-page.scss
+++ b/src/documentation/template/template-page/_template-page.scss
@@ -13,11 +13,10 @@ $tikui-template-page-nav-width: 340px !default;
   position: fixed;
   inset: 0;
   flex-direction: column;
+  min-height: 0;
 
-  &--container {
+  &--header-container {
     box-sizing: content-box;
-    flex-basis: 0;
-    flex-grow: 1;
     margin: 0 auto;
     padding: 0 $tikui-template-page-spacing;
     width: auto;
@@ -27,17 +26,34 @@ $tikui-template-page-nav-width: 340px !default;
 
   &--body {
     display: flex;
+    flex-basis: 0;
     flex-grow: 1;
     background-color: $tikui-color-background;
-    padding: $tikui-template-page-spacing 0;
+    padding: 0;
+    min-height: 0;
     overflow: auto;
+  }
+
+  &--container {
+    flex-basis: 0;
+    flex-grow: 1;
+    min-width: 0;
+    min-height: 0;
+  }
+
+  &--container-content {
+    box-sizing: content-box;
+    margin: 0 auto;
+    padding: $tikui-template-page-spacing;
+    width: auto;
+    max-width: $tikui-template-page-container-width;
   }
 
   &--nav {
     box-sizing: content-box;
     position: sticky;
     top: 0;
-    padding: 0 $tikui-template-page-nav-padding;
+    padding: $tikui-template-page-spacing $tikui-template-page-nav-padding;
     width: $tikui-template-page-nav-width;
     overflow: auto;
   }
@@ -59,9 +75,14 @@ $tikui-template-page-nav-width: 340px !default;
   .tikui-template-page {
     overflow: auto;
 
+    &--header-container,
     &--container {
       padding: 0 $tikui-template-page-small-spacing;
       width: auto;
+    }
+
+    &--container-content {
+      padding: 0;
     }
 
     &--body {
@@ -72,6 +93,7 @@ $tikui-template-page-nav-width: 340px !default;
 
     &--nav {
       position: static;
+      padding: 0;
       width: auto;
     }
   }
