--- a/part/code.pug
+++ b/part/code.pug
@@ -2,6 +2,8 @@
   .tikui-line-section--column
     pre.doc-code-example
       code.code.language-html !{htmlCode}
+    button.tikui-button.-small(onclick='copyCode(this)' data-code=htmlRaw) Copy
   .tikui-line-section--column
     pre.doc-code-example
       code.code.language-pug !{pugCode}
+    button.tikui-button.-small(onclick='copyCode(this)' data-code=pugRaw) Copy
