--- a/src/documentation/atom/_atom.scss
+++ b/src/documentation/atom/_atom.scss
@@ -1,9 +1,9 @@
-@import 'button/button';
-@import 'header-item/header-item';
-@import 'image/image';
-@import 'link/link';
-@import 'logo/logo';
-@import 'nav-item/nav-item';
-@import 'paragraph/paragraph';
-@import 'quote/quote';
-@import 'title/title';
+@use 'button/button';
+@use 'header-item/header-item';
+@use 'image/image';
+@use 'link/link';
+@use 'logo/logo';
+@use 'nav-item/nav-item';
+@use 'paragraph/paragraph';
+@use 'quote/quote';
+@use 'title/title';
