--- a/src/documentation/atom/paragraph/_paragraph.scss
+++ b/src/documentation/atom/paragraph/_paragraph.scss
@@ -1,3 +1,5 @@
+@use '../../quark/paragraph/paragraph';
+
 .tikui-paragraph {
-  @include tikui-paragraph;
+  @include paragraph.tikui-paragraph;
 }
