--- a/src/documentation/atom/title/_title.scss
+++ b/src/documentation/atom/title/_title.scss
@@ -1,4 +1,4 @@
-@import 'title-main/title-main';
-@import 'title-brand/title-brand';
-@import 'title-section/title-section';
-@import 'title-part/title-part';
+@use 'title-main/title-main';
+@use 'title-brand/title-brand';
+@use 'title-section/title-section';
+@use 'title-part/title-part';
