--- a/src/documentation/atom/title/title-part/_title-part.scss
+++ b/src/documentation/atom/title/title-part/_title-part.scss
@@ -1,3 +1,5 @@
+@use '../../../quark/title/title-part';
+
 .tikui-title-part {
-  @include tikui-title-part;
+  @include title-part.tikui-title-part;
 }
