--- a/src/documentation/molecule/_molecule.scss
+++ b/src/documentation/molecule/_molecule.scss
@@ -1,5 +1,5 @@
-@import 'atom/atom';
-@import 'component/component';
-@import 'header-navigation/header-navigation';
-@import 'list/list';
-@import 'nav-vertical/nav-vertical';
+@use 'atom/atom';
+@use 'component/component';
+@use 'header-navigation/header-navigation';
+@use 'list/list';
+@use 'nav-vertical/nav-vertical';
