--- a/src/documentation/organism/_organism.scss
+++ b/src/documentation/organism/_organism.scss
@@ -1,5 +1,5 @@
-@import 'dual-section/dual-section';
-@import 'line-section/line-section';
-@import 'header/header';
-@import 'linear-molecule/linear-molecule';
-@import 'spacing/spacing';
+@use 'dual-section/dual-section';
+@use 'line-section/line-section';
+@use 'header/header';
+@use 'linear-molecule/linear-molecule';
+@use 'spacing/spacing';
