--- a/src/documentation/quark/_quark.scss
+++ b/src/documentation/quark/_quark.scss
@@ -1,5 +1,5 @@
-@import 'link/link';
-@import 'list/list';
-@import 'paragraph/paragraph';
-@import 'text/text';
-@import 'title/title';
+@use 'link/link';
+@use 'list/list';
+@use 'paragraph/paragraph';
+@use 'text/text';
+@use 'title/title';
