--- a/src/documentation/token/_token.scss
+++ b/src/documentation/token/_token.scss
@@ -1,4 +1,4 @@
-@import 'breakpoint/breakpoint';
-@import 'color/color';
-@import 'font-family/font-family';
-@import 'size/size';
+@use 'breakpoint/breakpoint';
+@use 'color/color';
+@use 'font-family/font-family';
+@use 'size/size';
