--- a/src/documentation/atom/header-item/_header-item.scss
+++ b/src/documentation/atom/header-item/_header-item.scss
@@ -1,13 +1,17 @@
-$tikui-header-item-color-text: $tikui-color-text-dark !default;
-$tikui-header-item-font-family: $tikui-font-family-main !default;
+@use '../../token/breakpoint/breakpoint';
+@use '../../token/color/color';
+@use '../../token/font-family/font-family';
+
+$tikui-header-item-color-text: color.$tikui-color-text-dark !default;
+$tikui-header-item-font-family: font-family.$tikui-font-family-main !default;
 $tikui-header-item-spacing: 6px !default;
 $tikui-header-item-feedback-size: 9px !default;
-$tikui-header-item-feedback-color: $tikui-color-tertiary !default;
-$tikui-header-item-focus-color-shadow: $tikui-color-primary !default;
+$tikui-header-item-feedback-color: color.$tikui-color-tertiary !default;
+$tikui-header-item-focus-color-shadow: color.$tikui-color-primary !default;
 $tikui-header-item-focus-radius-shadow: 5px !default;
 $tikui-header-item-font-size: 16px !default;
 $tikui-header-item-text-radius: 3px !default;
-$tikui-header-item-large-breakpoint: $tikui-breakpoint-large !default;
+$tikui-header-item-large-breakpoint: breakpoint.$tikui-breakpoint-large !default;
 $tikui-header-item-small-font-size: 5vw !default;
 $tikui-header-item-padding-bottom: $tikui-header-item-spacing + $tikui-header-item-feedback-size;
 
