--- a/src/documentation/atom/nav-item/_nav-item.scss
+++ b/src/documentation/atom/nav-item/_nav-item.scss
@@ -1,5 +1,8 @@
-$tikui-nav-item-color-text: $tikui-color-text-dark !default;
-$tikui-nav-item-font-family: $tikui-font-family-main !default;
+@use '../../token/color/color';
+@use '../../token/font-family/font-family';
+
+$tikui-nav-item-color-text: color.$tikui-color-text-dark !default;
+$tikui-nav-item-font-family: font-family.$tikui-font-family-main !default;
 $tikui-nav-item-font-size: 16px !default;
 $tikui-nav-item-main-font-size: 24px !default;
 
