--- a/src/documentation/organism/spacing/_spacing.scss
+++ b/src/documentation/organism/spacing/_spacing.scss
@@ -1,2 +1,2 @@
-@import 'horizontal-spacing/horizontal-spacing';
-@import 'vertical-spacing/vertical-spacing';
+@use 'horizontal-spacing/horizontal-spacing';
+@use 'vertical-spacing/vertical-spacing';
