--- a/src/documentation/organism/spacing/horizontal-spacing/_horizontal-spacing.scss
+++ b/src/documentation/organism/spacing/horizontal-spacing/_horizontal-spacing.scss
@@ -1,3 +1,5 @@
+@use '../../../token/size/size';
+
 @mixin tikui-horizontal-spacing-column-size($size) {
   &.-s#{$size} > &--column {
     margin-right: $size * 1px;
@@ -11,7 +13,7 @@
 .tikui-horizontal-spacing {
   display: flex;
 
-  @each $size in $tikui-size-spacing {
+  @each $size in size.$tikui-size-spacing {
     @include tikui-horizontal-spacing-column-size($size);
   }
 
