--- a/src/documentation/organism/spacing/vertical-spacing/_vertical-spacing.scss
+++ b/src/documentation/organism/spacing/vertical-spacing/_vertical-spacing.scss
@@ -1,3 +1,5 @@
+@use '../../../token/size/size';
+
 @mixin tikui-vertical-spacing-line-size($size) {
   &.-s#{$size} > &--line {
     margin-bottom: $size * 1px;
@@ -9,7 +11,7 @@
 }
 
 .tikui-vertical-spacing {
-  @each $size in $tikui-size-spacing {
+  @each $size in size.$tikui-size-spacing {
     @include tikui-vertical-spacing-line-size($size);
   }
 }
