--- a/src/documentation/quark/list/_list.scss
+++ b/src/documentation/quark/list/_list.scss
@@ -1,7 +1,11 @@
-$tikui-list-color-text: $tikui-color-text-dark !default;
-$tikui-list-font-family: $tikui-font-family-main !default;
+@use '../../token/color/color';
+@use '../../token/font-family/font-family';
+@use '../../token/size/size';
+
+$tikui-list-color-text: color.$tikui-color-text-dark !default;
+$tikui-list-font-family: font-family.$tikui-font-family-main !default;
 $tikui-list-font-size: 16px !default;
-$tikui-list-line-height: $tikui-size-line-standard !default;
+$tikui-list-line-height: size.$tikui-size-line-standard !default;
 
 %tikui-list {
   margin: 0;
