--- a/src/documentation/quark/paragraph/_paragraph.scss
+++ b/src/documentation/quark/paragraph/_paragraph.scss
@@ -1,7 +1,12 @@
-$tikui-paragraph-color-text: $tikui-color-text-dark !default;
-$tikui-paragraph-font-family: $tikui-font-family-main !default;
+@use '../../token/color/color';
+@use '../../token/font-family/font-family';
+@use '../../token/size/size';
+@use '../text/text';
+
+$tikui-paragraph-color-text: color.$tikui-color-text-dark !default;
+$tikui-paragraph-font-family: font-family.$tikui-font-family-main !default;
 $tikui-paragraph-font-size: 16px !default;
-$tikui-paragraph-line-height: $tikui-size-line-standard !default;
+$tikui-paragraph-line-height: size.$tikui-size-line-standard !default;
 
 %tikui-paragraph {
   margin: 0;
@@ -14,5 +19,5 @@ $tikui-paragraph-line-height: $tikui-size-line-standard !default;
 
 @mixin tikui-paragraph {
   @extend %tikui-paragraph;
-  @include tikui-q-text-bold;
+  @include text.tikui-q-text-bold;
 }
