--- a/src/documentation/quark/title/_title-section.scss
+++ b/src/documentation/quark/title/_title-section.scss
@@ -1,5 +1,6 @@
-$tikui-title-section-font-size: 46px !default;
+@use 'title-base';
 
+$tikui-title-section-font-size: 46px !default;
 %tikui-title-section {
   @extend %tikui-title;
 
